* Changelog

** Unreleased
Introduces *Emacs 29.1* features support.

Includes usability adjustments.

*** Added
- Global keybinding =C-c f r= to call ~M-x rename-visited-file~ (Emacs 29.1).
- Enable =pixel-scroll-precision-mode= (since Emacs 29.1).
- Global keybinding =C-c e r= to call ~M-x restart-emacs~ (Emacs 29.1).
- Global keybinding =C-c e q= to call ~M-x yet-kill-emacs-reset-desktop~.
- Advice ~yet-org-export-to-tmp-dir~ uses temporary directory by default.
- Enable =web-mode-enable-current-column-highlight= to highlight matching pair
  of tags.
- New optional constant ~yet-org-noob~.
- =org-mode-map= keybinding =C-c o l= to call =org-store-link=.
- Function to unfill elements ~M-x yet-org-unfill~ (=C-M-q=).
- Function ~M-x yet-org-export-output-file-name-toggle~ (=C-c o e=).
- Enable =undelete-frame-mode= that provides function ~M-x undelete-frame~.
- Enable =winner-mode= that records changes in window configuration.
- Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.

*** Changed
- Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
- Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.
- Disable confusing =org-mode= keybindings only if ~yet-org-noob~ is enabled.
- Set user option =org-export-headline-levels= value to 5.
- Disable =org-html-validation-link=.
- =dired-mode= keybinding =n= now calls ~yet-dired-display-next~.
- =dired-mode= keybinding =p= now calls ~yet-dired-display-previous~.
- =rust-mode= ~yet-rustup-doc~ now bound to =C-c o d= (was =C-c C-h=).
- =php-mode= ~php-search-documentation~ bound to =C-c o d= (was =C-c C-h=).
- Customize windows for buffers display with ~display-buffer-alist~.
- Display =Ediff= control panel in the same frame.
- Do not highlight region in non-selected window.
- Enable =web-mode= for HTML files.

*** Removed
- Package =org-preview-html= in favor of =C-c C-e h o= (~org-export-dispatch~).