@@ -90,3 +90,24 @@ After the change, the last window on the list displays the INITIAL-BUFFER."
 ;; Mnemonics: `b' Buffer, `r' Rotate.
 (global-set-key (kbd "C-c b r") 'yet-rotate-windows-buffers)
 
+
+;;; Toggle two windows split type (horizontal or vertical).
+;;; Based on https://emacs.stackexchange.com/a/5372/28451
+;;; and https://www.emacswiki.org/emacs/ToggleWindowSplit
+
+(defun yet-toggle-window-split ()
+  "Toggle between horizontal and vertical split with two windows."
+  (interactive)
+  (if (> (length (window-list)) 2)
+      (error "Can toggle split of only 2 windows!")
+    (let ((func (if (window-combined-p)
+                    #'split-window-horizontally
+                  #'split-window-vertically)))
+      (delete-other-windows)
+      (funcall func)
+      (save-selected-window
+        (other-window 1)
+        (switch-to-buffer (other-buffer))))))
+
+;; Mnemonics: `b' Buffer, `s' Split.
+(global-set-key (kbd "C-c b s") 'yet-toggle-window-split)
